resolve comment form layout issues

--- a/wp-content/themes/neil-ross/scss/style.scss
+++ b/wp-content/themes/neil-ross/scss/style.scss
@@ -587,6 +587,19 @@ h3.contact-head {
   }
 }
 
+.form-cancel.button {
+  width: 100%;
+  display: block;
+  font-size: 1em;
+  color: #000;
+  border-color: #000;
+
+  &:hover {
+    color: $grey;
+    border-color: $grey;
+  }
+}
+
 .masthead {
   opacity: 0;
   transition: all 0.4s linear;
@@ -1402,6 +1415,7 @@ h3.col-header {
 // } no-flexbox
 
 @import 'partials/_blogpost';
+@import 'partials/_comment-form';
 @import 'partials/_floatingforms';
 
 .no-backgroundcliptext {
